8231605: Improve test helpers
Submitted-by: asemenyuk

Reviewed-by: herrick